feat : stat widg
